fix bug where dialog and alert is located behind the map iframe

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -26,3 +26,6 @@ $turquoise: #318B86;
 
 /*Sizes*/
 $header-height: 3.5em;
+
+/*z-index for alert and dialog*/
+$z-index-overlay: 1000;
