--- a/src/assets/styles/components/_alert.scss
+++ b/src/assets/styles/components/_alert.scss
@@ -1,6 +1,6 @@
 .alert-container {
   position: fixed;
-  z-index: 100;
+  z-index: $z-index-overlay;
   top: ($header-height*1.1);
   left: 50%;
   transform: translate(-50%, 0);
