--- a/src/assets/styles/components/_dialog.scss
+++ b/src/assets/styles/components/_dialog.scss
@@ -8,7 +8,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 999;
   width: 100%;
   height: 100%;
   background-color: black;
@@ -27,7 +27,7 @@
 .dialog {
   $dialogPaddingTop: 20px;
   position: fixed;
-  z-index: 101;
+  z-index: $z-index-overlay;
   left: 50%;
   top: ($header-height*1.1);
   transform: translate(-50%, 0);
